# covalence

./: .env.example  .gitignore  .last-ingest-commit  .mcp.json  AGE_CLEANUP_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  MILESTONES.md  Makefile  README.md  VISION.md  covalence.conf.example  docker-compose.yml  openapi.json  package-lock.json
engine/: Cargo.toml  Makefile
engine/.cargo/: audit.toml
engine/crates/covalence-api/: Cargo.toml
engine/crates/covalence-api/src/: error.rs  main.rs  middleware.rs  openapi.rs  routes.rs  state.rs
engine/crates/covalence-api/src/handlers/: adapters.rs  admin.rs  analysis.rs  ask.rs  config.rs  dto.rs  edges.rs  extensions.rs  hooks.rs  mcp.rs  memory.rs  metrics.rs  mod.rs  nodes.rs  ontology.rs  search.rs  sessions.rs  sources.rs
engine/crates/covalence-ast-extractor/: Cargo.toml
engine/crates/covalence-ast-extractor/src/: main.rs
engine/crates/covalence-ast-extractor/tests/: stdio_contract.rs
engine/crates/covalence-core/: Cargo.toml
engine/crates/covalence-core/src/: config.rs  config_loader.rs  error.rs  factory.rs  lib.rs  metrics.rs
engine/crates/covalence-core/src/consolidation/: batch.rs  compiler.rs  contention.rs  deep.rs  graph_batch.rs  mod.rs  (+6 more)
engine/crates/covalence-eval/: Cargo.toml
engine/crates/covalence-eval/fixtures/: sample.json  search_precision_baseline.json
engine/crates/covalence-eval/src/: chunker_eval.rs  error.rs  extractor_eval.rs  fixtures.rs  lib.rs  main.rs  metrics.rs  ragas.rs  regression.rs  search_eval.rs  search_regression.rs
engine/crates/covalence-migrations/: Cargo.toml
engine/crates/covalence-migrations/migrations/: 001_initial_schema.sql  001_schema.sql  002_spec_update.sql  002_type_system.sql  003_source_embedding.sql  003_statements.sql  004_fix_embedding_dimensions.sql  004_pipeline.sql  005_search.sql  005_search_traces.sql  006_stored_procedures.sql  007_indexes.sql  007_per_table_dimensions.sql  008_config_and_seeds.sql  008_ontology_clusters.sql  009_fix_cooccurrence_sp.sql  009_hdbscan_clustering.sql  009_metadata_schemas.sql  010_adapter_default_strategy.sql  010_normalized_content_byte_offsets.sql  010_sessions.sql  011_agent_memory.sql  011_domain_generalization.sql  011_statement_tables.sql  012_fix_delete_source_cascade.sql  012_parameterize_domain_sps.sql  012_wave8_foundation.sql  013_fix_duplicate_sources_metric.sql  013_ingestion_hook_phases.sql  013_lifecycle_hooks.sql  013_retry_queue.sql  013_supersede_hardcoded_seeds.sql  014_fix_backfill_embeddings_filter.sql  014_graph_type_system.sql  015_domain_entropy.sql  016_drop_legacy_domain_column.sql  016_processing_metadata.sql  017_source_supersession.sql  018_source_status.sql  019_stored_procedures_batch1.sql  (+6 more)
engine/crates/covalence-migrations/src/: main.rs
engine/crates/covalence-worker/: Cargo.toml
engine/crates/covalence-worker/src/: main.rs
engine/migrations/: .gitkeep  018_reconsolidation_cooldown.sql  019_temporal_edges.sql  020_consolidation_schedule.sql  021_expanding_recompile_schedule.sql  022_undercuts_and_contention_type.sql  023_content_hash.sql  024_faceted_classification.sql  025_occ_phase0.sql  026_kg_inference.sql  027_gap_registry.sql  028_ewc_structural_importance.sql  029_critique_loop.sql  031_tasks.sql  032_gap_registry_phase2.sql  033_causal_semantics.sql  034_edge_causal_metadata.sql  035_stored_procedures.sql  036_fix_edge_causal_metadata_bootstrap.sql  037_confidence_propagation.sql  038_infer_article_edges_task_type.sql  039_provenance_cap.sql  040_cap_edge_confidence.sql  041_claims_layer_generation.sql  041_drop_age_id.sql  042_claims_layer_generation.sql  043_source_metadata_gin_index.sql  044_add_claim_node_type.sql
engine/prompts/: code_summary.md  entity_extraction.md  relationship_extraction.md  section_compilation.md  source_summary.md
engine/src/: errors.rs  lib.rs  main.rs
engine/src/api/: auth.rs  extractors.rs  mod.rs  openapi.rs  routes.rs
engine/src/confidence/: constants.rs  dfquad_penalty.rs  ds_fusion.rs  mod.rs  recompute.rs  supersedes_decay.rs
engine/src/db/: edge_causal_metadata.rs  mod.rs
engine/src/embeddings/: mod.rs  node2vec.rs  spectral.rs  store.rs
engine/src/graph/: age.rs  algorithms.rs  confidence.rs  memory.rs  mod.rs  repository.rs  sql.rs
engine/src/models/: article_state.rs  edge_causal_metadata.rs  mod.rs
engine/src/search/: dimension.rs  fusion.rs  graph.rs  lexical.rs  mod.rs  structural.rs  vector.rs
engine/src/services/: admin_service.rs  article_service.rs  audit_service.rs  concerns_service.rs  contention_service.rs  edge_service.rs  memory_service.rs  mod.rs  node_helpers.rs  provenance_trace_service.rs  search_service.rs  session_service.rs  source_service.rs  task_service.rs  whatif_service.rs
engine/src/worker/: claim_extraction.rs  consolidation.rs  contention.rs  critique.rs  decay.rs  dedup_claims.rs  divergence.rs  infer_article_edges.rs  llm.rs  merge_edges.rs  mod.rs  navigation.rs  openai.rs  provenance_cap.rs  reconsolidation.rs  source_selection.rs  tree_index.rs
engine/tests/: search_eval.rs  test_db_schema.sql  test_graph_embeddings.rs  test_structural_search.rs  test_topological_confidence.rs  worker_handlers.rs
engine/tests/integration/: helpers.rs  main.rs  search_benchmark.rs  search_tests.rs  test_age_edge_sync.rs  test_auto_link.rs  test_cancellation.rs  test_causal_metadata.rs  test_causal_semantics.rs  test_compilation.rs  test_compile.rs  test_concerns.rs  test_confidence_propagation.rs  test_consolidation.rs  test_content_hash.rs  test_contention.rs  test_critique.rs  test_dashboard.rs  test_decay.rs  test_distillation.rs  test_embed.rs  test_epistemic_slis.rs  test_ewc_structural.rs  test_faceted_classification.rs  test_gap_registry.rs  test_gap_registry_horizon.rs  test_gap_registry_phase2.rs  test_graph_health.rs  test_graph_stats.rs  test_infer_article_edges.rs  test_kg_inference.rs  test_lexical_ilike.rs  test_memory_recall.rs  test_merge.rs  test_namespace.rs  test_navigation.rs  test_occ.rs  test_openapi.rs  test_process_queue_cleanup.rs  test_property.rs  (+18 more)
(+553 files in other folders)
