[package]
name = "covalence-engine"
version = "0.1.0"
edition = "2024"
description = "Graph-native knowledge substrate for AI agent persistent memory"
license = "MIT"

[dependencies]
futures = "0.3"
md5 = "0.7"
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
serial_test = "3"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
sha2 = "0.10.9"
hex = "0.4.3"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
tower = { version = "0.5", features = ["util"] }
http = "1"
