[workspace]
resolver = "3"
members = [
    "crates/covalence-core",
    "crates/covalence-api",
    "crates/covalence-migrations",
    "crates/covalence-eval",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Graph
petgraph = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
sha2 = "0.10"

# Text processing
unicode-normalization = "0.1"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async utilities
futures = "0.3"

# Config
dotenvy = "0.15"
