[workspace]
resolver = "3"
members = [
    "crates/covalence-core",
    "crates/covalence-api",
    "crates/covalence-ast-extractor",
    "crates/covalence-worker",
    "crates/covalence-migrations",
    "crates/covalence-eval",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Graph
petgraph = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
sha2 = "0.10"

# Text processing
unicode-normalization = "0.1"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Config
dotenvy = "0.15"
figment = { version = "0.10", features = ["yaml", "env"] }

# Regex
regex = "1"

# Clustering
hdbscan = "0.10"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# HTML conversion
html2md = "0.2"

# JSON Schema validation
jsonschema = "0.29"

# Code parsing
tree-sitter = "0.26"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
