[package]
name = "covalence-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Covalence knowledge engine — core library"

[dependencies]
tokio = { workspace = true }
url = "2"
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = { workspace = true }
async-trait = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
regex = { workspace = true }
serde_yaml = "0.9"
hdbscan = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-c = { workspace = true }
metrics = { workspace = true }
html2md = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
figment = { version = "0.10", features = ["yaml", "env", "test"] }
