[package]
name = "covalence-migrations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Covalence knowledge engine — database migrations"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
