[package]
name = "covalence-worker"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Queue worker for Covalence ingestion pipeline"

[dependencies]
covalence-core = { path = "../covalence-core" }
anyhow = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
